# ParaglidingLogbook

./: .gitignore  README.md  pyproject.toml  requirements.txt
flight_data/: 2025-12-16-XCT-MXX-01.igc  2025-12-30-XCT-MXX-01.igc  2026-01-04-XCT-MXX-01.igc  2026-01-14-XCT-MXX-01.igc  2026-01-17-XCT-MXX-01.igc  2026-02-17-XCT-MXX-01.igc  2026-02-25-XCT-MXX-01.igc  2026-02-25-XCT-MXX-02.igc  2026-02-25-XCT-MXX-03.igc  2026-02-28-XCT-MXX-01.igc  2026-03-02-XCT-MXX-01.igc  2026-03-04-XCT-MXX-01.igc  2026-03-04-XCT-MXX-02.igc  2026-03-04-XCT-MXX-03.igc  2026-03-04-XCT-MXX-04.igc  2026-03-04-XCT-MXX-05.igc  2026-03-05-XCT-MXX-01.igc  2026-03-05-XCT-MXX-02.igc  2026-03-05-XCT-MXX-03.igc  2026-03-05-XCT-MXX-04.igc  2026-03-05-XCT-MXX-05.igc  2026-03-05-XCT-MXX-06.igc  2026-03-06-XCT-MXX-01.igc  2026-03-06-XCT-MXX-02.igc  2026-03-06-XCT-MXX-03.igc  2026-03-10-XCT-MXX-01.igc  2026-03-14-XCT-MXX-01.igc  2026-03-14-XCT-MXX-02.igc  2026-03-14-XCT-MXX-03.igc  2026-03-14-XCT-MXX-04.igc  2026-03-14-XCT-MXX-05.igc  2026-03-19-XCT-MXX-01.igc  2026-03-19-XCT-MXX-02.igc  2026-03-21-XCT-MXX-01.igc  2026-03-23-XCT-MXX-01.igc  2026-03-23-XCT-MXX-02.igc  2026-03-23-XCT-MXX-03.igc  2026-03-23-XCT-MXX-04.igc  2026-03-23-XCT-MXX-05.igc  2026-03-26-XCT-MXX-01.igc  (+13 more)
src/logbook/: __init__.py  db.py  file_scanner.py  gui.py  igc_reader.py  main.py  models.py
src/logbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/logbook/migrations/: __init__.py  m0001_create_flights.py
test_data/: 2026-04-02-XCT-MXX-01.txt
tests/: test_igc_reader.py
